# ZK-Puzzle-Writeups

./: .gitignore  404.html  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
crypto/2+2=5/code/: diff.patch  readme.txt
crypto/2+2=5/code/server/: Cargo.toml  proof
crypto/2+2=5/code/server/guest/: Cargo.toml
crypto/2+2=5/code/server/guest/src/: lib.rs
crypto/2+2=5/code/server/src/: main.rs
crypto/2+2=5/two_plus_two/: index.html
crypto/double-trouble/zkhack-double-trouble-main/: index.html
crypto/group-dynamics/code/: index.html
crypto/group-dynamics/group-dynamics/: index.html
crypto/lets-hash-it-out/code/: exp.ipynb
crypto/lets-hash-it-out/lets-hash-it-out/: index.html
crypto/oven/: index.html
crypto/safeescrow/: index.html
crypto/zkCTF/day1/Division Quiz/description/: index.html
crypto/zkCTF/day1/Division Quiz/src/: quiz.rs
crypto/zkCTF/day1/Ethereal/: index.html
crypto/zkCTF/day1/Kid Math/: Cargo.toml
crypto/zkCTF/day2/familiar_strangers/: index.html
crypto/zkCTF/zkCTF/: index.html
docs/: index.md
docs/crypto/: oven.md  safeescrow.md
docs/crypto/2+2=5/: two_plus_two.md
docs/crypto/2+2=5/code/: Dockerfile
docs/crypto/double-trouble/zkhack-double-trouble-main/: 1.html
docs/crypto/group-dynamics/: group-dynamics.md
docs/crypto/group-dynamics/code/: exp.ipynb
docs/crypto/lets-hash-it-out/: lets-hash-it-out.md
docs/crypto/lets-hash-it-out/code/: bits_vecs-1709319118230
docs/crypto/zkCTF/: zkCTF.md
search/: search_index.json
stylesheets/: extra.css
(+11 files in other folders)
