[package]
name = "challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { path = "../jolt/jolt-sdk", features = ["host"] }
guest = { package = "challenge-guest", path = "./guest" }

hex = "0.4.3"
sha3 = { version = "0.10.8", default-features = false }

[workspace]
members = ["guest"]

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
